--- a/taskmaster/app/src/main/res/layout/activity_all_tasks.xml
+++ b/taskmaster/app/src/main/res/layout/activity_all_tasks.xml
@@ -17,4 +17,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listRecycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/gray"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
